fix: correct script and stylesheet paths in index-funcionario

--- a/DESKTOPV2/index-funcionario.html
+++ b/DESKTOPV2/index-funcionario.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lina X - Painel do Funcionário</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="css/theme.css">
   <style>
     * {
       margin: 0;
@@ -689,8 +688,8 @@
   </nav>
 
   <!-- SCRIPTS -->
-  <script src="js/api.js"></script>
-  <script src="js/utils.js"></script>
+  <script src="api.js"></script>
+  <script src="utils.js"></script>
 
   <script>
     // ===== INITIALIZATION =====
