fix: update menu links and permissions for employee dashboard

--- a/DESKTOPV2/index-funcionario.html
+++ b/DESKTOPV2/index-funcionario.html
@@ -613,17 +613,17 @@
 
   <!-- MENU DROPDOWN -->
   <div class="menu-dropdown" id="menuDropdown">
-    <a href="configuracoes.html" data-permission="gerenciar_configuracoes">
-      <i class="fas fa-cog"></i>
-      <span>Configurações</span>
+    <a href="funcionario/funcionarios-funcionario.html" data-permission="gerenciar_funcionarios">
+      <i class="fas fa-hard-hat"></i>
+      <span>Equipe</span>
     </a>
-    <a href="financeiro.html" data-permission="ver_financeiro">
+    <a href="funcionario/financeiro-funcionario.html" data-permission="ver_financeiro">
       <i class="fas fa-money-bill-wave"></i>
       <span>Financeiro</span>
     </a>
-    <a href="funcionarios.html" data-permission="gerenciar_funcionarios">
-      <i class="fas fa-hard-hat"></i>
-      <span>Funcionários</span>
+    <a href="funcionario/servicos-funcionario.html" data-permission="config_ver_servicos">
+      <i class="fas fa-wrench"></i>
+      <span>Serviços</span>
     </a>
     <a href="perfil.html">
       <i class="fas fa-id-card"></i>
@@ -673,11 +673,11 @@
       <i class="fas fa-home"></i>
       <span>Início</span>
     </a>
-    <a href="ordens.html" class="nav-item" data-permission="gerenciar_ordens" title="Ordens">
+    <a href="funcionario/ordens-funcionario.html" class="nav-item" data-permission="gerenciar_ordens" title="Ordens">
       <i class="fas fa-list-alt"></i>
       <span>Ordens</span>
     </a>
-    <a href="clientes.html" class="nav-item" data-permission="gerenciar_clientes" title="Clientes">
+    <a href="funcionario/clientes-funcionario.html" class="nav-item" data-permission="gerenciar_clientes" title="Clientes">
       <i class="fas fa-users"></i>
       <span>Clientes</span>
     </a>
@@ -761,35 +761,35 @@
           icon: 'fa-list-alt',
           title: 'Ordens',
           description: 'Gerenciar ordens de serviço',
-          href: 'ordens.html'
+          href: 'funcionario/ordens-funcionario.html'
         },
         {
           permission: 'gerenciar_clientes',
           icon: 'fa-users',
           title: 'Clientes',
           description: 'Gerenciar base de clientes',
-          href: 'clientes.html'
+          href: 'funcionario/clientes-funcionario.html'
         },
         {
           permission: 'gerenciar_funcionarios',
           icon: 'fa-hard-hat',
-          title: 'Funcionários',
+          title: 'Equipe',
           description: 'Gerenciar equipe de trabalho',
-          href: 'funcionarios.html'
+          href: 'funcionario/funcionarios-funcionario.html'
         },
         {
           permission: 'ver_financeiro',
           icon: 'fa-money-bill-wave',
           title: 'Financeiro',
           description: 'Ver relatórios e movimentações financeiras',
-          href: 'financeiro.html'
+          href: 'funcionario/financeiro-funcionario.html'
         },
         {
-          permission: 'gerenciar_configuracoes',
-          icon: 'fa-cog',
-          title: 'Configurações',
-          description: 'Gerenciar configurações da empresa',
-          href: 'configuracoes.html'
+          permission: 'config_ver_servicos',
+          icon: 'fa-wrench',
+          title: 'Serviços',
+          description: 'Gerenciar serviços disponíveis',
+          href: 'funcionario/servicos-funcionario.html'
         }
       ];
 
