--- a/DESKTOPV2/funcionario/ordens-funcionario.html
+++ b/DESKTOPV2/funcionario/ordens-funcionario.html
@@ -863,13 +863,9 @@
     document.addEventListener('DOMContentLoaded', async () => {
       if (!validateFuncionarioAccess()) return;
 
-      document.getElementById('mainContent').innerHTML = `<div id="header"></div><div id="menu"></div>`;
-
-      const headerEl = document.querySelector('#mainContent #header');
-      const menuEl = document.querySelector('#mainContent #menu');
-
-      headerEl.innerHTML = createFuncionarioHeader(PAGE_TITLE);
-      menuEl.innerHTML = createFuncionarioMenu();
+      // Set header in correct location (outside mainContent)
+      document.getElementById('header').innerHTML = createFuncionarioHeader(PAGE_TITLE);
+      document.getElementById('menu').innerHTML = createFuncionarioMenu();
       document.getElementById('mobileNav').innerHTML = createMobileNav(PAGE_ACTIVE);
 
       loadUserInfo();
