--- a/DESKTOPV2/funcionario/nova-ordem-funcionario.html
+++ b/DESKTOPV2/funcionario/nova-ordem-funcionario.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LinaX - Nova Ordem</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Lina Forge - Nova Ordem</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Alpine.js via CDN -->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.3/dist/cdn.min.js"></script>
@@ -929,6 +928,14 @@
                                 >
                                     Pick-up
                                 </button>
+                                <button
+                                    type="button"
+                                    class="category-btn"
+                                    :class="{ 'selected': vehicleCategory === 'CAMINHONETE' }"
+                                    @click="selectVehicleCategory('CAMINHONETE')"
+                                >
+                                    Caminhonete
+                                </button>
                             </div>
                         </div>
                     </template>
@@ -1612,7 +1619,8 @@
                         'HATCH': 'Carro Hatch',
                         'SEDAN': 'Carro Sedan',
                         'SUV': 'SUV',
-                        'PICKUP': 'Pick-up'
+                        'PICKUP': 'Pick-up',
+                        'CAMINHONETE': 'Caminhonete'
                     };
                     return labels[this.vehicleCategory] || 'Carro';
                 },
