--- a/DESKTOPV2/signup.html
+++ b/DESKTOPV2/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lina Lab - Criar Conta</title>
+    <title>Lina Forge - Criar Conta</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -258,15 +258,81 @@
             -webkit-text-fill-color: transparent;
             background-clip: text;
             text-shadow: 0 4px 20px rgba(255, 255, 255, 0.3);
+            animation: linaAnimation 6s ease-in-out infinite;
+            position: relative;
+            z-index: 2;
         }
 
-        .logo-lab {
+        .logo-forge {
             font-family: 'Inter', sans-serif;
             font-size: 72px;
             font-weight: 700;
             letter-spacing: 2px;
             color: #ffffff;
             text-shadow: 0 4px 20px rgba(255, 255, 255, 0.5);
+            animation: forgeAnimation 6s ease-in-out infinite;
+            position: relative;
+            z-index: 3;
+        }
+
+        /* Lina Animation: appear, move left, come back */
+        @keyframes linaAnimation {
+            0% {
+                opacity: 0;
+                transform: translateX(50px);
+            }
+            20% {
+                opacity: 1;
+                transform: translateX(0);
+            }
+            50% {
+                opacity: 1;
+                transform: translateX(0);
+            }
+            60% {
+                opacity: 0;
+                transform: translateX(-80px);
+            }
+            70% {
+                opacity: 0;
+                transform: translateX(80px);
+            }
+            80% {
+                opacity: 1;
+                transform: translateX(0);
+            }
+            100% {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
+        /* Forge Animation: stay while Lina leaves and comes back */
+        @keyframes forgeAnimation {
+            0%, 100% {
+                opacity: 1;
+                transform: scale(1);
+            }
+            50% {
+                opacity: 1;
+                transform: scale(1);
+            }
+            55% {
+                opacity: 0.8;
+                transform: scale(0.95);
+            }
+            60% {
+                opacity: 0.8;
+                transform: scale(0.95);
+            }
+            70% {
+                opacity: 0.8;
+                transform: scale(0.95);
+            }
+            80% {
+                opacity: 1;
+                transform: scale(1);
+            }
         }
 
         .logo-particles-effect {
@@ -659,7 +725,7 @@
                 </div>
                 <div class="logo-main">
                     <span class="logo-lina">Lina</span>
-                    <span class="logo-lab">Lab</span>
+                    <span class="logo-forge">Forge</span>
                 </div>
             </div>
 
